# mdata

./: Cargo.toml  avcheck.md  mdata.config  readme.md
data/: av_check.md  check.md  managa_check.md
src/: lib.rs  main.rs
src/config/: mod.rs
src/data_manager/: mod.rs
src/file/: mod.rs
src/little_spider/: http.rs  mod.rs
src/little_spider/site/: dlsite.rs  javbus.rs  mod.rs  wikipedia.rs
src/sqlite_handler/: mod.rs
src/utils/: mod.rs
unhandle_data/: asmrcheck.md  avcheck.md
