[package]
name = "mdata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
scraper = "0.12.0"
lazy_static = "1.4.0"
structopt = "0.3.25"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.26.3"
features = ["bundled-sqlcipher-vendored-openssl"]