[package]
edition = "2021"
name = "mdata"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
confy = "0.4.0"
crossbeam-utils = "0.8.6"
lazy_static = "1.4.0"
reqwest = {version = "0.11", features = ["json", "blocking"]}
scraper = "0.12.0"
serde = {version = "1.0", features = ["derive"]}
structopt = "0.3.25"

[dependencies.rusqlite]
features = ["bundled-sqlcipher-vendored-openssl"]
version = "0.26.3"
